--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   "dependencies": {
     "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
-    "koa-router": "^12.0.0",
     "mysql2": "^3.2.4"
   }
 }
