--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@koa/router": "^12.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
+    "jimp": "^0.22.7",
     "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
-    "mysql2": "^3.2.4"
+    "koa-session": "^6.4.0",
+    "mysql2": "^3.2.4",
+    "svg-captcha-fixed": "^1.5.2"
   }
 }
